ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
    - host: exemplo1.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: nginx
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache
spec:
  rules:
    - host: exemplo2.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: apache
                port:
                  number: 80
